# tokimo-app-weather

./: .gitignore  Cargo.toml  README.md  tokimo-app.toml
.github/workflows/: ci.yml
src/: app_server.rs  assets.rs  main.rs
src/handlers/: mod.rs
ui/: .pnpmfile.cjs  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: TranslatorContext.tsx  i18n.ts  index.css  index.tsx  types.ts  use-weather-settings.ts
ui/src/components/: WeatherAirQuality.tsx  WeatherBackground.tsx  WeatherCurrent.tsx  WeatherDaily.tsx  WeatherDetails.tsx  WeatherHourly.tsx  WeatherIcon.tsx  WeatherSettingsPage.tsx  webgl-weather.ts
ui/src/pages/: index.tsx
